--- a/clases/clase_7/Taller_condicionales_bucles_funciones.ipynb
+++ b/clases/clase_7/Taller_condicionales_bucles_funciones.ipynb
@@ -3,16 +3,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/ferneyreina19/IA-Aplicacion-a-la-Economia-1/blob/main/clases/clase_7/Taller_condicionales_bucles_funciones.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "4A_GfFHIq-AW"
       },
       "source": [
@@ -140,7 +130,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 43,
       "metadata": {
         "id": "R37wEVbcsW6A"
       },
@@ -151,29 +141,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 51,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "uTrbrdrw5-UO",
-        "outputId": "85695f39-b646-4d4f-cb03-8d655bce1335"
+        "outputId": "07ec6bd3-c5be-44c0-b863-62cba659118d"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Número de ciudades con más de 100 empresas: 120\n",
-            "Número de ciudades con más de 100 empresas: 340\n",
-            "Número de ciudades con más de 100 empresas: 210\n"
+            "Número de ciudades con más de 100 empresas: 3\n"
           ]
         }
       ],
       "source": [
-        "for empresa in empresas:\n",
-        "  if empresa > 100:\n",
-        "    print(f\"Número de ciudades con más de 100 empresas: {empresa}\")"
+        "contador = 0\n",
+        "for numero in empresas:\n",
+        "  if numero > 100:\n",
+        "    contador += 1\n",
+        "print(f\"Número de ciudades con más de 100 empresas: {contador}\")"
       ]
     },
     {
@@ -359,10 +349,10 @@
       "execution_count": 21,
       "metadata": {
         "id": "lMXQSzyESOHF",
-        "outputId": "25a0b004-a0d3-40dd-8c12-65fdbcd30025",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "25a0b004-a0d3-40dd-8c12-65fdbcd30025"
       },
       "outputs": [
         {
@@ -382,10 +372,10 @@
       "execution_count": 20,
       "metadata": {
         "id": "uXkpBQrNSQi_",
-        "outputId": "cd707b38-8e34-4017-a2e0-d1bd19d66324",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "cd707b38-8e34-4017-a2e0-d1bd19d66324"
       },
       "outputs": [
         {
@@ -405,10 +395,10 @@
       "execution_count": 19,
       "metadata": {
         "id": "i-0qVNphSTuf",
-        "outputId": "2b93b540-1f84-4007-afbe-554efe1447a5",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "2b93b540-1f84-4007-afbe-554efe1447a5"
       },
       "outputs": [
         {
@@ -472,10 +462,10 @@
       "execution_count": 23,
       "metadata": {
         "id": "BVx7hr_nTWv9",
-        "outputId": "b3b55685-4a1a-48e3-9bb1-9f99cf045f51",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "b3b55685-4a1a-48e3-9bb1-9f99cf045f51"
       },
       "outputs": [
         {
@@ -495,10 +485,10 @@
       "execution_count": 24,
       "metadata": {
         "id": "EX38wbcdTTR0",
-        "outputId": "fddae2cd-832f-4efd-821c-55ec4931304d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "fddae2cd-832f-4efd-821c-55ec4931304d"
       },
       "outputs": [
         {
@@ -543,22 +533,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": 52,
       "metadata": {
         "id": "306D2pg7SAF-",
-        "outputId": "a660aa50-357b-4e32-9c4d-6bacab2c5155",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "5b886fca-2fd7-419e-a635-e36a314af213"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Ingrese una contraseña: sebal\n",
+            "Ingrese una contraseña: Hola\n",
             "La contraseña debe tener al menos 8 caracteres\n",
-            "La contraseña debe contener al menos una letra mayúscula\n",
             "La contraseña debe contener al menos un número\n",
             "La contraseña debe tener al menos 8 caracteres\n",
             "Contraseña inválida\n"
@@ -667,11 +656,11 @@
       "execution_count": 33,
       "metadata": {
         "id": "uQK42HdWv_aI",
-        "outputId": "4917b49f-b490-428b-b1fa-9cd42272851c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "outputId": "4917b49f-b490-428b-b1fa-9cd42272851c"
       },
       "outputs": [
         {
@@ -697,11 +686,11 @@
       "execution_count": 34,
       "metadata": {
         "id": "44R1evuAv_aU",
-        "outputId": "220115ec-7aab-4da4-a1f4-13d507bac27a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "outputId": "220115ec-7aab-4da4-a1f4-13d507bac27a"
       },
       "outputs": [
         {
@@ -772,10 +761,10 @@
       "execution_count": 36,
       "metadata": {
         "id": "kOVujSn_v_bK",
-        "outputId": "3cbfbcd5-d2aa-4cec-e718-663006745852",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "3cbfbcd5-d2aa-4cec-e718-663006745852"
       },
       "outputs": [
         {
@@ -798,10 +787,10 @@
       "execution_count": 37,
       "metadata": {
         "id": "xIaZJfLK0P-f",
-        "outputId": "fa39d211-cad3-4e12-e8a6-7387209d500e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "fa39d211-cad3-4e12-e8a6-7387209d500e"
       },
       "outputs": [
         {
@@ -824,10 +813,10 @@
       "execution_count": 38,
       "metadata": {
         "id": "2PaQ6jV70ShH",
-        "outputId": "1443029e-ed83-40ce-dc10-0b2e0ff96821",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "1443029e-ed83-40ce-dc10-0b2e0ff96821"
       },
       "outputs": [
         {
@@ -905,11 +894,11 @@
       "execution_count": 40,
       "metadata": {
         "id": "yLWqy7NWv_bv",
-        "outputId": "d393ddc5-6f22-42da-908d-ea66f6391b66",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "outputId": "d393ddc5-6f22-42da-908d-ea66f6391b66"
       },
       "outputs": [
         {
@@ -935,11 +924,11 @@
       "execution_count": 41,
       "metadata": {
         "id": "Azjv8GE7v_b0",
-        "outputId": "0c0bb7f3-8318-42c2-f6b6-3b31c0512841",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "outputId": "0c0bb7f3-8318-42c2-f6b6-3b31c0512841"
       },
       "outputs": [
         {
@@ -963,8 +952,7 @@
   ],
   "metadata": {
     "colab": {
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "display_name": "Python 3",
